# bixi_agent

./: .coverage  .gitignore  01_raw_data.py  02_tools.py  03_tools.py  03_vector_search.py  04_geospatial.ipynb  04_vector_search.py  05_geospatial.ipynb  0x_ml.py  README.md  pyproject.toml
.kaggle/: kaggle.json
agent_tutorial/: 01_get_the_data.py  02_make_the_tools.py  03_ship_the_agent.py  README.md
bixi_real_data/: OD_2016.csv  Stations_2016.csv
bixi_scrape/: abonnement-mensuel.md  abonnement-saisonnier.md  aller-simple.md  comment-utiliser-bixi.md  en (1).md  en.md  en_ami-bixi.md  en_available-jobs-at-bixi.md  en_contact-us.md  en_ebike.md  en_group-rates.md  en_pricing.md  en_seasonal-membership.md  en_suggest-a-station.md  en_trailer-pass.md  en_trailer.md  en_work-at-bixi.md  fr.md  fr_abonnement-mensuel.md  fr_abonnement-saisonnier.md  fr_acces-remorque.md  fr_aller-simple-et-remorque.md  fr_postes-ouverts-chez-bixi.md  fr_remorque.md  fr_suggerer-une-station.md  fr_tarif-de-groupe.md  fr_tarifs.md  fr_travailler-chez-bixi.md  index.md  postes-ouverts-chez-bixi.md  tarif-de-groupe.md  tarifs.md
docs/: GBFS_API.md  GBFS_QUICKSTART.md  README.md  UC_FUNCTION_APPROACHES.md  UNITY_CATALOG.md
examples/: basic_usage.py  gbfs_station_status.py  individual_function_registration.py  ml_pipeline_example.py  ml_pipeline_with_mlflow.py  real_data_ml_pipeline.py  unity_catalog_functions.py
ml_results_real_data/: bixi_real_data_linear_regression.pkl
ml_results_with_mlflow/: bixi_model_linear_regression.pkl  bixi_model_random_forest.pkl
notebooks/: README.md  (+5 more)
(+15 files in other folders)
